# OmniProbe

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml
configs/: eval_correspondence_ap10k.yaml  eval_correspondence_cross_soco.yaml  eval_correspondence_geometric_soco.yaml  eval_correspondence_linear_probe_eval_soco.yaml  eval_correspondence_linear_probe_eval_spair.yaml  eval_correspondence_linear_probe_soco.yaml  eval_correspondence_linear_probe_spair.yaml  eval_correspondence_navi.yaml  eval_correspondence_scannet.yaml  eval_correspondence_soco.yaml  eval_correspondence_spair.yaml  eval_segmentation_ade20k.yaml  eval_tracking_tapvid.yaml  run.yaml  train_depth.yaml  train_pose_ep_imagenet3d.yaml  train_pose_imagenet3d.yaml  train_segmentation_ade20k.yaml  train_snorm.yaml
configs/backbone/: c_radio_3_b.yaml  c_radio_3_g.yaml  c_radio_3_h.yaml  c_radio_3_l.yaml  c_radio_4_h.yaml  c_radio_4_so400m.yaml  clip_b16.yaml  clip_b16_laion.yaml  clip_convnext.yaml  clip_convnext_augreg.yaml  clip_h14.yaml  clip_l14.yaml  convnext_fcmae.yaml  convnext_in22k.yaml  crocov2.yaml  deit3_b16.yaml  deit3_l16.yaml  dift_sd15.yaml  dift_sd21.yaml  dino_b16.yaml  dino_b8.yaml  dino_s16.yaml  dinov2_b14.yaml  dinov2_b14_diy_sc.yaml  dinov2_b14_reg.yaml  dinov2_g14.yaml  dinov2_l14.yaml  dinov2_s14.yaml  dinov3_convnext_base.yaml  dinov3_convnext_large.yaml  dinov3_convnext_small.yaml  dinov3_convnext_tiny.yaml  dinov3_vit7b16.yaml  dinov3_vit7b16_sat.yaml  dinov3_vitb16.yaml  dinov3_vith16plus.yaml  dinov3_vitl16.yaml  dinov3_vitl16_sat.yaml  dinov3_vitl16plus.yaml  dinov3_vits16.yaml  (+52 more)
data_processing/: README.md  create_nyu_pkl.py  resize_navi.py
docs/: DEVELOP.md  MODELS.md  ROADMAP.md  THIRD_PARTY_LICENSES.md
omniprobe/: __init__.py  run.py  runtime.py
tests/: conftest.py  fakes.py  test_backbone_checkpoint.py  test_backbone_configs.py  test_backbone_contracts.py  test_backbone_instantiation.py  test_backbone_loading.py  test_detection3d.py  test_eval_helpers.py  test_task_runtime.py
(+111 files in other folders)
