[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniprobe"
version = "1.0.0"
description = "A unified framework for evaluating visual features across dense tasks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Olaf Dünkel" },
    { name = "Basavaraj Sunagad" },
]
maintainers = [
    { name = "Olaf Dünkel", email = "olduebox@outlook.com" },
]
dependencies = [
    # Deep learning core
    "torch>=2.2",
    "torchvision>=0.17",
    # Numeric / scientific
    "numpy>=1.24",
    "scipy>=1.10",
    "Pillow>=10.0",
    "opencv-python-headless>=4.8",
    # Config / logging / progress
    "hydra-core~=1.3",
    "omegaconf>=2.3",
    "loguru>=0.7",
    "tqdm>=4.60",
    # Model building blocks
    "einops>=0.7",
    "timm>=1.0",
    "transformers>=4.40,<5",
    # Visualization / augmentation
    "albumentations>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
clip = ["open-clip-torch>=2.23"]
sam = ["segment-anything>=1.0"]
diffusion = ["diffusers>=0.30"]
xformers = ["xformers>=0.0.25"]
knn = ["faiss-cpu>=1.8"]
data-processing = ["joblib>=1.4", "mat73>=0.62"]
dev = ["pytest>=7.0", "pre-commit"]
all = ["omniprobe[clip,sam,diffusion,xformers,data-processing]"]

[tool.hatch.build.targets.wheel]
packages = ["omniprobe"]

[project.urls]
Repository = "https://github.com/GenIntel/OmniProbe"
Issues = "https://github.com/GenIntel/OmniProbe/issues"

[project.scripts]
omniprobe = "omniprobe.run:main_cli"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
xformers = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
